--- a/serverless-compose.yml
+++ b/serverless-compose.yml
@@ -1,9 +1,9 @@
 services:
   service-employees:
-    path: ./services-employees
+    path: ./employees
 
   service-users:
-    path: ./services-users
+    path: ./users
 
   service-products:
-    path: ./services-products
+    path: ./products
