--- a/services/products/serverless.yml
+++ b/services/products/serverless.yml
@@ -11,10 +11,10 @@ provider:
   iam:
     role: arn:aws:iam::468251834706:role/LabRole
   environment:
-    TOKENS_EMPLOYEE_TABLE: ${cf:200millas-employees-${self:provider.stage}.TOKENS_EMPLOYEE_TABLE_NAME}
+    TOKENS_EMPLOYEE_TABLE: ${cf:millas-employees-${self:provider.stage}.TOKENS_EMPLOYEE_TABLE_NAME}
     PRODUCTS_TABLE: t_product-${self:provider.stage}
     PRODUCTS_BUCKET: products-200millas-${self:provider.stage}
-    VALIDAR_TOKEN_FN_ARN: ${cf:200millas-employees-${self:provider.stage}.ValidarEmployeeTokenAccesoArn}
+    VALIDAR_TOKEN_FN: ${cf:millas-employees-${self:provider.stage}.ValidarEmployeeTokenAccesoArn}
   httpApi:
     cors: true
 
