--- a/services/employees/serverless.yml
+++ b/services/employees/serverless.yml
@@ -1,18 +1,16 @@
-org: 200millas
 service: service-employees
 
 provider:
   name: aws
   runtime: python3.13
   region: us-east-1
-  stage: dev
   memorySize: 256
   timeout: 20
   iam:
     role: arn:aws:iam::468251834706:role/LabRole
   environment:
-    EMPLOYEE_TABLE: t_employee-${self:provider.stage}
-    TOKENS_EMPLOYEE_TABLE: t_tokens_employee_acceso-${self:provider.stage}
+    EMPLOYEE_TABLE: t_employee
+    TOKENS_EMPLOYEE_TABLE: t_tokens_employee_acceso
   httpApi:
     cors: true
 
@@ -29,42 +27,3 @@ functions:
       - httpApi:
           method: POST
           path: /employees/login-employee
-  ValidarEmployeeTokenAcceso:
-    handler: services.employees.validar_token_employee.lambda_handler
-
-resources:
-  Resources:
-    EmployeeTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: t_employee-${self:provider.stage}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: tenant_id
-            AttributeType: S
-          - AttributeName: user_id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: tenant_id
-            KeyType: HASH
-          - AttributeName: user_id
-            KeyType: RANGE
-    TokensEmployeeTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: t_tokens_employee_acceso-${self:provider.stage}
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: token
-            AttributeType: S
-        KeySchema:
-          - AttributeName: token
-            KeyType: HASH
-
-  Outputs:
-    ValidarEmployeeTokenAccesoArn:
-      Value: !GetAtt ValidarEmployeeTokenAcceso.Arn  
-      Description: ARN de la función ValidarEmployeeTokenAcceso
-    TOKENS_EMPLOYEE_TABLE_NAME:
-      Value: t_tokens_employee_acceso-${self:provider.stage}
-      Description: Nombre de la tabla de tokens de empleados
