--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@
 AWS_ACCOUNT_ID=123456789012
 
 # Nombre de tu organización en Serverless Framework
-ORG_NAME=tu-organizacion
+ORG_NAME=200millas
 
 # ============================================================
 # DYNAMODB TABLE NAMES (GLOBAL)
