--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ TABLE_LOCALES=Millas-Locales
 TABLE_PRODUCTOS=Millas-Productos
 TABLE_PEDIDOS=Millas-Pedidos
 TABLE_HISTORIAL_ESTADOS=Millas-Historial-Estados
-
+TABLE_TOKENS=Millas-Tokens
 # ------------------------------------------------------------
 # DATA GENERATOR - ADMIN CREDENTIALS
 # ------------------------------------------------------------
