--- a/users/serverless.yml
+++ b/users/serverless.yml
@@ -10,7 +10,7 @@ provider:
     role: arn:aws:iam::${env:AWS_ACCOUNT_ID}:role/LabRole
   environment:
     USERS_TABLE: ${env:TABLE_USUARIOS}
-    TOKENS_TABLE_USERS: ${env:TABLE_TOKENS}
+    TOKENS_TABLE_USERS: ${env:TABLE_TOKENS_USUARIOS}
   httpApi:
     cors: true
     
