--- a/serverless-compose.yml
+++ b/serverless-compose.yml
@@ -15,3 +15,8 @@ services:
     path: products
     dependsOn:
       - dependencias
+  
+  service-pedidos:
+    path: pedidos
+    dependsOn:
+      - dependencias
