--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ ADMIN_PASSWORD=admin123
 # ============================================================
 # Productos - S3 BUCKET
 # ============================================================
-S3_BUCKET_NAME=productos-millas-images-bucket
+S3_BUCKET_NAME=productos-millas-images-bucket-${env:AWS_ACCOUNT_ID}
 
 # ============================================================
 # SENDGRID EMAIL CONFIGURATION
