correccion de bug create pedido

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@
 # region=us-east-1 (opcional, por defecto: us-east-1)
 
 # Tu AWS Account ID (12 dígitos) - Obtener con: aws sts get-caller-identity --query Account --output text
-AWS_ACCOUNT_ID=368499777044
+AWS_ACCOUNT_ID=
 
 # Nombre de tu organización en Serverless Framework
-ORG_NAME=jcarlost
+ORG_NAME=
 
 # ============================================================
 # DYNAMODB TABLE NAMES (GLOBAL)
