--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,33 @@
 # ============================================================
-# AWS CONFIGURATION (GLOBAL)
+# 200 MILLAS - CONFIGURACIÓN DE ENTORNO
 # ============================================================
-# Las credenciales de AWS deben estar configuradas en ~/.aws/credentials con el formato:
+# Copia este archivo a .env y configura tus valores
+# cp .env.example .env
+
+# ============================================================
+# AWS CONFIGURATION
+# ============================================================
+# Las credenciales de AWS deben estar configuradas en ~/.aws/credentials
+# Ejecuta: aws configure
+# O configura manualmente:
 # [default]
 # aws_access_key_id=YOUR_ACCESS_KEY_ID
 # aws_secret_access_key=YOUR_SECRET_ACCESS_KEY
-# aws_session_token=YOUR_SESSION_TOKEN (opcional)
-# region=us-east-1 (opcional, por defecto: us-east-1)
+# aws_session_token=YOUR_SESSION_TOKEN (si usas AWS Academy)
 
-# Tu AWS Account ID (12 dígitos) - Obtener con: aws sts get-caller-identity --query Account --output text
-AWS_ACCOUNT_ID=
+# Tu AWS Account ID (12 dígitos)
+# Obtener con: aws sts get-caller-identity --query Account --output text
+AWS_ACCOUNT_ID=123456789012
+
+# Región de AWS (por defecto: us-east-1)
+AWS_REGION=us-east-1
 
 # Nombre de tu organización en Serverless Framework
-ORG_NAME=
+# Debe coincidir con tu cuenta en serverless.com
+ORG_NAME=millas
 
 # ============================================================
-# DYNAMODB TABLE NAMES (GLOBAL)
+# DYNAMODB TABLES
 # ============================================================
 TABLE_USUARIOS=Millas-Usuarios
 TABLE_EMPLEADOS=Millas-Empleados
@@ -24,21 +36,30 @@ TABLE_PRODUCTOS=Millas-Productos
 TABLE_PEDIDOS=Millas-Pedidos
 TABLE_HISTORIAL_ESTADOS=Millas-Historial-Estados
 TABLE_TOKENS_USUARIOS=Millas-Tokens-Usuarios
-# ------------------------------------------------------------
+
+# ============================================================
+# S3 BUCKETS
+# ============================================================
+# Bucket para imágenes de productos
+S3_BUCKET_NAME=bucket-imagenes-productos-123456789012
+
+# ============================================================
+# LAMBDA FUNCTIONS
+# ============================================================
+# Nombre de la función Lambda para validar tokens
+VALIDAR_TOKEN_LAMBDA_NAME=service-users-dev-ValidarToken
+
+# ============================================================
 # DATA GENERATOR - ADMIN CREDENTIALS
-# ------------------------------------------------------------
-# Usuario único con rol Admin - Administrador de toda la plataforma
+# ============================================================
+# Usuario administrador creado automáticamente
 ADMIN_NOMBRE="Administrador General"
 ADMIN_EMAIL=admin@200millas.com
 ADMIN_PASSWORD=admin123
 
 # ============================================================
-# Productos - S3 BUCKET
+# EMAIL CONFIGURATION (OPCIONAL)
 # ============================================================
-S3_BUCKET_NAME=productos-millas-images-bucket-${AWS_ACCOUNT_ID}
-VALIDAR_TOKEN_LAMBDA_NAME=ValidarTokenAcceso
-# ============================================================
-# SENDGRID EMAIL CONFIGURATION
-# ============================================================
-#BREVO_API_KEY=
-#EMAIL_FROM=elmer.villegas@utec.edu.pe 
+# Configuración para envío de emails (deshabilitado por defecto)
+# BREVO_API_KEY=tu-api-key-de-brevo
+# EMAIL_FROM=noreply@200millas.com 
